modified for synthetics to run with cxr model

--- a/metal/mmtl/cxr/analysis/notebooks/network_viz.ipynb
+++ b/metal/mmtl/cxr/analysis/notebooks/network_viz.ipynb
@@ -214,9 +214,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:metal] *",
+   "display_name": "Python (metal)",
    "language": "python",
-   "name": "conda-env-metal-py"
+   "name": "metal"
   },
   "language_info": {
    "codemirror_mode": {
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
