added outside slice eval

--- a/metal/mmtl/cxr/analysis/notebooks/network_viz.ipynb
+++ b/metal/mmtl/cxr/analysis/notebooks/network_viz.ipynb
@@ -215,6 +215,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of examples in with-drain eval: 11051\n",
+      "Number of examples in no-drain eval: 10923\n",
+      "Number of examples in total eval: 11259\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of examples in with-drain eval: {np.sum(outside_drain_slice_inds)}\")\n",
+    "print(f\"Number of examples in no-drain eval: {np.sum(drain_slice_inds)}\")\n",
+    "print(f\"Number of examples in total eval: {len(Ys['CXR8-DRAIN_PNEUMOTHORAX'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
