updates to allow for sample_dict and add_normal_col args, fixes issue with slice task being created multiple times

--- a/metal/mmtl/cxr/analysis/notebooks/evaluate_inside_outside_slice.ipynb
+++ b/metal/mmtl/cxr/analysis/notebooks/evaluate_inside_outside_slice.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/lfs/1/jdunnmon/repos/anaconda3/envs/metal/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/lfs/1/jdunnmon/repos/anaconda3/envs/metal/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -29,91 +27,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jdunnmon/Research/repos/anaconda3/envs/metal/lib/python3.6/site-packages/torch/serialization.py:435: SourceChangeWarning: source code of class 'metal.mmtl.slicing.slice_model.SliceModel' has changed. you can retrieve the original source code by accessing the object's source attribute or set `torch.nn.Module.dump_patches = True` and use the patch tool to revert the changes.\n",
+      "  warnings.warn(msg, SourceChangeWarning)\n",
+      "/home/jdunnmon/Research/repos/anaconda3/envs/metal/lib/python3.6/site-packages/torch/serialization.py:435: SourceChangeWarning: source code of class 'metal.mmtl.cxr.cxr_modules.TorchVisionEncoder' has changed. you can retrieve the original source code by accessing the object's source attribute or set `torch.nn.Module.dump_patches = True` and use the patch tool to revert the changes.\n",
+      "  warnings.warn(msg, SourceChangeWarning)\n",
+      "/home/jdunnmon/Research/repos/anaconda3/envs/metal/lib/python3.6/site-packages/torch/serialization.py:435: SourceChangeWarning: source code of class 'torchvision.models.densenet.DenseNet' has changed. you can retrieve the original source code by accessing the object's source attribute or set `torch.nn.Module.dump_patches = True` and use the patch tool to revert the changes.\n",
+      "  warnings.warn(msg, SourceChangeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#model_log = '/home/jdunnmon/Research/repos/metal/logs/2019_04_28/test_pneumo_slice_model_naive_10_22_22'\n",
     "#model_log = '/home/jdunnmon/Research/repos/metal/logs/2019_04_28/test_pneumo_slice_model_hps_10_19_59'\n",
-    "#model_log = '/home/jdunnmon/Research/repos/metal/logs/2019_04_28/test_pneumo_slice_model_22_19_24'\n",
-    "model_log = '/lfs/1/jdunnmon/repos/metal/logs/2019_05_02/sps_drain_slice_neg_test_fine_tune_all_pneumo_10_16_56'\n",
+    "model_log = '/home/jdunnmon/Research/repos/metal/logs/2019_04_28/test_pneumo_slice_model_22_19_24'\n",
+    "#model_log = '/lfs/1/jdunnmon/repos/metal/logs/2019_05_02/sps_drain_slice_neg_test_fine_tune_all_pneumo_10_16_56'\n",
     "model = torch.load(os.path.join(model_log,'model.pkl'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Could not find kwarg \"finding\" in destination dict.\n",
-      "Could not find kwarg \"use_slice_model\" in destination dict.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/lfs/1/jdunnmon/repos/anaconda3/envs/metal/lib/python3.6/site-packages/torchvision/models/densenet.py:212: UserWarning: nn.init.kaiming_normal is now deprecated in favor of nn.init.kaiming_normal_.\n",
-      "  nn.init.kaiming_normal(m.weight.data)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading CXR8-DRAIN Dataset\n",
-      "Using train finding ALL\n",
-      "Using resolution 224...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/lfs/1/jdunnmon/repos/anaconda3/envs/metal/lib/python3.6/site-packages/torchvision/transforms/transforms.py:188: UserWarning: The use of the transforms.Scale transform is deprecated, please use transforms.Resize instead.\n",
-      "  \"please use transforms.Resize instead.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using dataset seed: 1701\n",
-      "Using eval finding ALL\n",
-      "Using resolution 224...\n",
-      "Using dataset seed: 1701\n",
-      "Using eval finding ALL\n",
-      "Using resolution 224...\n",
-      "Using dataset seed: 1701\n",
-      "Added label_set with 78468/78468 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:ind to payload CXR8-DRAIN_train.\n",
-      "Added label_set with 62608/78468 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred to payload CXR8-DRAIN_train.\n",
-      "Added label_set with 78468/78468 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:ind to payload CXR8-DRAIN_train.\n",
-      "Added label_set with 78468/78468 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:pred to payload CXR8-DRAIN_train.\n",
-      "Added label_set with 11259/11259 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:ind to payload CXR8-DRAIN_valid.\n",
-      "Added label_set with 10923/11259 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred to payload CXR8-DRAIN_valid.\n",
-      "Added label_set with 11259/11259 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:ind to payload CXR8-DRAIN_valid.\n",
-      "Added label_set with 11259/11259 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:pred to payload CXR8-DRAIN_valid.\n",
-      "Added label_set with 22393/22393 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:ind to payload CXR8-DRAIN_test.\n",
-      "Added label_set with 21552/22393 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred to payload CXR8-DRAIN_test.\n",
-      "Added label_set with 22393/22393 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:ind to payload CXR8-DRAIN_test.\n",
-      "Added label_set with 22393/22393 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:pred to payload CXR8-DRAIN_test.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#os.environ['CXRDATA']='/data/datasets/mmtl/cxr/'\n",
-    "#os.environ['CXR8IMAGES']='/data/datasets/nih/images/images'\n",
-    "os.environ['CXRDATA']='/dfs/scratch0/jdunnmon/data/mmtl/cxr'\n",
-    "os.environ['CXR8IMAGES']='/lfs/1/jdunnmon/data/nih/images/images'\n",
+    "os.environ['CXRDATA']='/data/datasets/mmtl/cxr/'\n",
+    "os.environ['CXR8IMAGES']='/data/datasets/nih/images/images'\n",
+    "#os.environ['CXRDATA']='/dfs/scratch0/jdunnmon/data/mmtl/cxr'\n",
+    "#os.environ['CXR8IMAGES']='/lfs/1/jdunnmon/data/nih/images/images'\n",
     "log_jsons = load_results_from_log(model_log)\n",
     "log_jsons['task_config']['subsample'] = -1\n",
     "log_jsons['task_config']['eval_finding'] = 'ALL'\n",
     "log_jsons['task_config']['model_type'] = 'slice_model'\n",
     "log_jsons['model_config']['model_type'] = 'slice_model'\n",
+    "log_jsons['task_config']['active_slice_heads'] = {'pred':True, 'ind':False}\n",
     "task_names=['CXR8-DRAIN_ALL']\n",
     "tasks, payloads = create_tasks_and_payloads(task_names, **log_jsons['task_config'], batch_size=32)"
    ]
@@ -822,6 +775,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ClassificationTask(name=CXR8-DRAIN_ATELECTASIS, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_CARDIOMEGALY, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_EFFUSION, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_INFILTRATION, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_MASS, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_NODULE, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PNEUMONIA, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PNEUMOTHORAX, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred, loss_multiplier=0.50),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:pred, loss_multiplier=0.50),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred, loss_multiplier=0.50),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:pred, loss_multiplier=0.50),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred, loss_multiplier=0.50),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PNEUMOTHORAX_slice:BASE:pred, loss_multiplier=0.50),\n",
+       " ClassificationTask(name=CXR8-DRAIN_CONSOLIDATION, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_EDEMA, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_EMPHYSEMA, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_FIBROSIS, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_PLEURAL_THICKENING, loss_multiplier=1.00),\n",
+       " ClassificationTask(name=CXR8-DRAIN_HERNIA, loss_multiplier=1.00)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -830,9 +822,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (metal)",
+   "display_name": "Python [conda env:metal] *",
    "language": "python",
-   "name": "metal"
+   "name": "conda-env-metal-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -844,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
