working on nerdd integration

--- a/metal/mmtl/cxr/debugging/train_drain_only_on_dev_single_task.ipynb
+++ b/metal/mmtl/cxr/debugging/train_drain_only_on_dev_single_task.ipynb
@@ -38,9 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_results_from_log' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-172fc671e3bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Loading results from model log\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel_log\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/home/jdunnmon/Research/repos/metal/logs/2019_05_07/test_naive_new_code_19_21_28'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mlog_jsons\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_results_from_log\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_log\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_results_from_log' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Loading results from model log\n",
     "model_log = '/home/jdunnmon/Research/repos/metal/logs/2019_05_07/test_naive_new_code_19_21_28'\n",
@@ -49,28 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "metal.utils - INFO - Could not find kwarg \"shuffle\" in destination dict.\n",
-      "metal.utils - INFO - Could not find kwarg \"attention\" in destination dict.\n",
-      "metal.utils - INFO - Could not find kwarg \"verbose\" in destination dict.\n",
-      "metal.mmtl.cxr.cxr_tasks - INFO - Loading CXR8-DRAIN Dataset\n",
-      "metal.mmtl.cxr.cxr_tasks - INFO - Using train finding ALL\n",
-      "/home/jdunnmon/Research/repos/anaconda3/envs/metal/lib/python3.6/site-packages/torchvision/transforms/transforms.py:208: UserWarning: The use of the transforms.Scale transform is deprecated, please use transforms.Resize instead.\n",
-      "  \"please use transforms.Resize instead.\")\n",
-      "metal.mmtl.cxr.cxr_datasets - INFO - Adding normal column to dataset\n",
-      "metal.mmtl.cxr.cxr_datasets - INFO - Using pre-specified sampling dictionary\n",
-      "metal.mmtl.cxr.cxr_datasets - INFO - Adding normal column to dataset\n",
-      "metal.mmtl.cxr.cxr_datasets - INFO - Adding normal column to dataset\n",
-      "metal.mmtl.cxr.cxr_tasks - INFO - Shuffling training split...\n",
-      "metal.mmtl.payload - INFO - Added label_set with 4525/7388 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred to payload CXR8-DRAIN_train.\n",
-      "metal.mmtl.payload - INFO - Added label_set with 10923/11259 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred to payload CXR8-DRAIN_valid.\n",
-      "metal.mmtl.payload - INFO - Added label_set with 21552/22393 labels for task CXR8-DRAIN_PNEUMOTHORAX_slice:chest_drain_cnn_neg:pred to payload CXR8-DRAIN_test.\n"
+     "ename": "NameError",
+     "evalue": "name 'log_jsons' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ce241956c6c5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtask_config\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlog_jsons\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'task_config'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtask_config\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'subsample'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtask_config\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eval_finding'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'ALL'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtask_names\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'CXR8-DRAIN_ALL'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtask_config\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sample_dict'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"train_sample_dict\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'PNEUMOTHORAX'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'ALL'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m300\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'log_jsons' is not defined"
      ]
     }
    ],
@@ -535,9 +537,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:metal] *",
+   "display_name": "Python (metal)",
    "language": "python",
-   "name": "conda-env-metal-py"
+   "name": "metal"
   },
   "language_info": {
    "codemirror_mode": {
@@ -549,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
