updated training nb

--- a/metal/mmtl/cxr/nerdd/train_chest_tube_model_new_val.ipynb
+++ b/metal/mmtl/cxr/nerdd/train_chest_tube_model_new_val.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EVALUATING AGAINST NERDD DATA"
+    "## SETTING UP MODEL"
    ]
   },
   {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "['f1', 'roc-auc', 'accuracy', 'precision', 'recall']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,14 +120,14 @@
     "import torch\n",
     "# Initializing the model\n",
     "model_config = log_jsons['model_config'] \n",
-    "model = torch.load(os.path.join(model_log,'model.pkl'))\n",
+    "#model = torch.load(os.path.join(model_log,'model.pkl'))\n",
     "#model_config.update({'model_weights': os.path.join(model_log,'best_model.pth')})\n",
-    "#model = MetalModel(tasks=nerdd_tasks, **model_config)"
+    "model = MetalModel(tasks=nerdd_tasks, **model_config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,50 +136,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_payload, dev_payload, test_payload = nerdd_payloads\n",
-    "metrics = ['NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/f1',\n",
-    "           'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/precision',\n",
-    "           'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/recall',\n",
-    "           'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/accuracy',\n",
-    "           'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/roc-auc', \n",
-    "]\n",
-    "metrics_dict = model.score(test_payload, metrics=metrics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/f1': 0.7238302502720348,\n",
-       " 'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/roc-auc': 0.9431975156321124,\n",
-       " 'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/accuracy': 0.9395282344531808,\n",
-       " 'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/precision': 0.7016877637130802,\n",
-       " 'NERDD-CHEST-TUBE_CHEST_TUBE/NERDD-CHEST-TUBE_CHEST_TUBE_test/NERDD-CHEST-TUBE_CHEST_TUBE/recall': 0.7474157303370786}"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metrics_dict"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EVALUATING AGAINST CHEXNET DEV DATA"
+    "## TRAINING WITH CHEXNET DEV DATA AS DEV"
    ]
   },
   {
@@ -193,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -230,60 +190,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_ATELECTASIS for task CXR8_ATELECTASIS from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_CARDIOMEGALY for task CXR8_CARDIOMEGALY from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_EFFUSION for task CXR8_EFFUSION from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_INFILTRATION for task CXR8_INFILTRATION from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_MASS for task CXR8_MASS from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_NODULE for task CXR8_NODULE from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_PNEUMONIA for task CXR8_PNEUMONIA from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_PNEUMOTHORAX for task CXR8_PNEUMOTHORAX from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_CONSOLIDATION for task CXR8_CONSOLIDATION from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_EDEMA for task CXR8_EDEMA from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_EMPHYSEMA for task CXR8_EMPHYSEMA from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_FIBROSIS for task CXR8_FIBROSIS from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_PLEURAL_THICKENING for task CXR8_PLEURAL_THICKENING from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_HERNIA for task CXR8_HERNIA from payload CXR8_valid.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_ATELECTASIS for task CXR8_ATELECTASIS from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_CARDIOMEGALY for task CXR8_CARDIOMEGALY from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_EFFUSION for task CXR8_EFFUSION from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_INFILTRATION for task CXR8_INFILTRATION from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_MASS for task CXR8_MASS from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_NODULE for task CXR8_NODULE from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_PNEUMONIA for task CXR8_PNEUMONIA from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_PNEUMOTHORAX for task CXR8_PNEUMOTHORAX from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_CONSOLIDATION for task CXR8_CONSOLIDATION from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_EDEMA for task CXR8_EDEMA from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_EMPHYSEMA for task CXR8_EMPHYSEMA from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_FIBROSIS for task CXR8_FIBROSIS from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_PLEURAL_THICKENING for task CXR8_PLEURAL_THICKENING from payload CXR8_test.\n",
+      "metal.mmtl.payload - INFO - Removed label_set CXR8_HERNIA for task CXR8_HERNIA from payload CXR8_test.\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_payload, test_payload = cxr8_payloads[1], cxr8_payloads[2]\n",
+    "tasks_to_remove = [t for t in val_payload.labels_to_tasks.keys() if 'slice' not in t]\n",
+    "_ = [val_payload.remove_label_set(t) for t in tasks_to_remove]\n",
+    "_ = [test_payload.remove_label_set(t) for t in tasks_to_remove]\n",
+    "val_payload.remap_labelsets({'CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind':'NERDD-CHEST-TUBE_CHEST_TUBE'})\n",
+    "test_payload.remap_labelsets({'CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind':'NERDD-CHEST-TUBE_CHEST_TUBE'})\n",
+    "val_dataset = val_payload.data_loader.dataset\n",
+    "test_dataset = test_payload.data_loader.dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "672\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking that # of pos labels is correct\n",
+    "print(sum(val_dataset.labels['CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind']==1))\n",
+    "print(sum(test_dataset.labels['CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind']==1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_payload = cxr8_payloads[1]\n",
-    "tasks_to_remove = [t for t in eval_payload.labels_to_tasks.keys() if 'slice' not in t]\n",
-    "_ = [eval_payload.remove_label_set(t) for t in tasks_to_remove]\n",
-    "eval_payload.remap_labelsets({'CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind':'NERDD-CHEST-TUBE_CHEST_TUBE'})\n",
-    "eval_dataset = eval_payload.data_loader.dataset"
+    "trainer_config = log_jsons['config']\n",
+    "trainer_config.update({\n",
+    "    'checkpoint_dir':None,\n",
+    "    'run_name': 'nerdd_chest_tube_cxr8_val'\n",
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10919"
-      ]
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_18_57/model_config.json\n",
+      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_18_57/task_config.json\n"
+     ]
     }
    ],
    "source": [
-    "sum(eval_dataset.labels['CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind']==2)"
+    "from metal.mmtl.trainer import MultitaskTrainer\n",
+    "\n",
+    "# Force early instantiation of writer to write all three configs to dict\n",
+    "trainer = MultitaskTrainer(**trainer_config)\n",
+    "trainer._set_writer()\n",
+    "\n",
+    "#trainer_config will get written automatically right before training\n",
+    "trainer.writer.write_config(model_config, \"model_config\")\n",
+    "trainer.writer.write_config(task_config, \"task_config\")\n",
+    "\n",
+    "payloads=[nerdd_payloads[0], val_payload, test_payload]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "metal.mmtl.trainer - INFO - Training on training set...\n",
+      "metal.mmtl.trainer - INFO - Beginning train loop.\n",
+      "metal.mmtl.trainer - INFO - Expecting a total of approximately 62960 examples and 3935 batches per epoch from 1 payload(s) in the train split.\n",
+      "metal.mmtl.trainer - INFO - Using previously initialized log writer during training...\n",
+      "/lfs/1/jdunnmon/repos/metal/metal/mmtl/trainer.py:645: UserWarning: You have provided checkpoint_dir, overriding the default of using log_dir/run_dir/run_name/checkpoints. Be careful: multiple concurrent runs may override each other.\n",
+      "  warnings.warn(msg)\n",
+      "metal.logging.writer - INFO - Writing config to /lfs/1/jdunnmon/repos/metal/logs/2019_05_18/nerdd_chest_tube_cxr8_val_07_18_57/config.json\n"
+     ]
+    },
+    {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fba80a6771134898ba20da519f668560",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "{'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_valid/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/f1': 0.04155844155844156,\n",
-       " 'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_valid/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/roc-auc': 0.7578077968067893,\n",
-       " 'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_valid/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/accuracy': 0.9671093680363668,\n",
-       " 'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_valid/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/precision': 0.09411764705882353,\n",
-       " 'NERDD-CHEST-TUBE_CHEST_TUBE/CXR8_valid/CXR8_PNEUMOTHORAX_slice:chest_drain_nerdd_cnn_pos:ind/recall': 0.02666666666666667}"
+       "HBox(children=(IntProgress(value=0, max=3935), HTML(value='')))"
       ]
      },
-     "execution_count": 99,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "metal.mmtl.trainer - INFO - Training all modules...\n",
+      "metal.mmtl.trainer - INFO - Training tasks {'NERDD-CHEST-TUBE_CHEST_TUBE': 'NERDD-CHEST-TUBE_CHEST_TUBE'}\n"
+     ]
     }
    ],
    "source": [
-    "# Should be 300 and 672\n",
-    "model.score(eval_payload)"
+    "trainer.train_model(model, payloads)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SANDBOX"
    ]
   },
   {
